--- a/index.html
+++ b/index.html
@@ -45,12 +45,6 @@
             text-transform: uppercase;
             letter-spacing: 1px;
         }
-        #pan-hint {
-            color: rgba(255, 255, 255, 0.5);
-            font-family: system-ui, sans-serif;
-            font-size: 10px;
-            margin-left: 8px;
-        }
         #pov-slider {
             width: 120px;
             height: 4px;
@@ -117,6 +111,41 @@
         #audio-btn:not(.muted) svg.unmuted {
             display: block;
         }
+        /* Weather Controls */
+        #weather-control {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            display: flex;
+            gap: 8px;
+            z-index: 100;
+        }
+        .weather-btn {
+            width: 44px;
+            height: 44px;
+            border: none;
+            border-radius: 50%;
+            background: rgba(0, 0, 0, 0.3);
+            backdrop-filter: blur(10px);
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: background 0.2s, transform 0.2s;
+        }
+        .weather-btn:hover {
+            background: rgba(0, 0, 0, 0.5);
+            transform: scale(1.1);
+        }
+        .weather-btn.active {
+            background: rgba(255, 255, 255, 0.3);
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+        }
+        .weather-btn svg {
+            width: 22px;
+            height: 22px;
+            fill: rgba(255, 255, 255, 0.8);
+        }
     </style>
 </head>
 <body>
@@ -124,7 +153,19 @@
     <div id="pov-control">
         <label>View</label>
         <input type="range" id="pov-slider" min="0" max="100" value="15">
-        <span id="pan-hint">Right-drag to pan</span>
+    </div>
+
+    <div id="weather-control">
+        <button id="sunny-btn" class="weather-btn active" title="Sunny">
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zM2 13h2c.55 0 1-.45 1-1s-.45-1-1-1H2c-.55 0-1 .45-1 1s.45 1 1 1zm18 0h2c.55 0 1-.45 1-1s-.45-1-1-1h-2c-.55 0-1 .45-1 1s.45 1 1 1zM11 2v2c0 .55.45 1 1 1s1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1zm0 18v2c0 .55.45 1 1 1s1-.45 1-1v-2c0-.55-.45-1-1-1s-1 .45-1 1zM5.99 4.58c-.39-.39-1.03-.39-1.41 0-.39.39-.39 1.03 0 1.41l1.06 1.06c.39.39 1.03.39 1.41 0s.39-1.03 0-1.41L5.99 4.58zm12.37 12.37c-.39-.39-1.03-.39-1.41 0-.39.39-.39 1.03 0 1.41l1.06 1.06c.39.39 1.03.39 1.41 0 .39-.39.39-1.03 0-1.41l-1.06-1.06zm1.06-10.96c.39-.39.39-1.03 0-1.41-.39-.39-1.03-.39-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0l1.06-1.06zM7.05 18.36c.39-.39.39-1.03 0-1.41-.39-.39-1.03-.39-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0l1.06-1.06z"/>
+            </svg>
+        </button>
+        <button id="rain-btn" class="weather-btn" title="Rain">
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 2c-5.33 4.55-8 8.48-8 11.8 0 4.98 3.8 8.2 8 8.2s8-3.22 8-8.2c0-3.32-2.67-7.25-8-11.8zm0 18c-3.35 0-6-2.57-6-6.2 0-2.34 1.95-5.44 6-9.14 4.05 3.7 6 6.79 6 9.14 0 3.63-2.65 6.2-6 6.2zm-4.17-6c.37 0 .67.26.74.62.41 2.22 2.28 2.98 3.64 2.87.43-.02.79.32.79.75 0 .4-.32.73-.72.75-2.13.13-4.62-1.09-5.19-4.12a.75.75 0 01.74-.87z"/>
+            </svg>
+        </button>
     </div>
 
     <div id="audio-control">
@@ -164,7 +205,7 @@
             poolColorDark: new THREE.Color(0x075985),
             floorColor: new THREE.Color(0x7DD3FC),
             groutColor: new THREE.Color(0x38BDF8),
-            waterDepth: 3.0,
+            waterDepth: 4.5,
             waveSpeed: 0.6,
             waveScale: 0.08,
             causticIntensity: 0.8,  // Brighter caustics
@@ -606,6 +647,12 @@
         let dragStart = new THREE.Vector2();
         let currentPOV = 15;
 
+        // Weather system
+        let currentWeather = 'sunny';
+        let rainParticles = null;
+        let rainGeometry = null;
+        let dirLight = null;
+
         function init() {
             scene = new THREE.Scene();
             scene.background = new THREE.Color(0x075985);
@@ -631,6 +678,10 @@
             createDivingBoard();
             createLadder();
             createToys();
+            createRain();
+
+            // Set initial sunny weather
+            setWeather('sunny');
 
             window.addEventListener('resize', onResize);
             window.addEventListener('mousemove', onMouseMove);
@@ -664,6 +715,10 @@
                     audioBtn.classList.add('muted');
                 }
             });
+
+            // Weather controls
+            document.getElementById('sunny-btn').addEventListener('click', () => setWeather('sunny'));
+            document.getElementById('rain-btn').addEventListener('click', () => setWeather('rain'));
         }
 
         // Update camera position based on POV slider and pan offset
@@ -846,6 +901,82 @@
             }
         `;
 
+        // Sand shader
+        const sandFS = `
+            varying vec2 vUv;
+            varying vec3 vWorldPos;
+
+            float hash(vec2 p) {
+                return fract(sin(dot(p, vec2(127.1, 311.7))) * 43758.5453);
+            }
+
+            float noise(vec2 p) {
+                vec2 i = floor(p);
+                vec2 f = fract(p);
+                f = f * f * (3.0 - 2.0 * f);
+                return mix(mix(hash(i), hash(i + vec2(1.0, 0.0)), f.x),
+                           mix(hash(i + vec2(0.0, 1.0)), hash(i + vec2(1.0, 1.0)), f.x), f.y);
+            }
+
+            void main() {
+                float n = noise(vWorldPos.xz * 5.0);
+                float n2 = noise(vWorldPos.xz * 15.0);
+                float n3 = noise(vWorldPos.xz * 30.0);
+
+                // Sandy beach colors
+                vec3 sand1 = vec3(0.96, 0.87, 0.70);
+                vec3 sand2 = vec3(0.91, 0.82, 0.65);
+                vec3 sand3 = vec3(0.85, 0.75, 0.58);
+
+                vec3 col = mix(sand1, sand2, n);
+                col = mix(col, sand3, n2 * 0.3);
+
+                // Fine grain detail
+                col *= 0.95 + n3 * 0.1;
+
+                gl_FragColor = vec4(col, 1.0);
+            }
+        `;
+
+        // Gravel shader
+        const gravelFS = `
+            varying vec2 vUv;
+            varying vec3 vWorldPos;
+
+            float hash(vec2 p) {
+                return fract(sin(dot(p, vec2(127.1, 311.7))) * 43758.5453);
+            }
+
+            float noise(vec2 p) {
+                vec2 i = floor(p);
+                vec2 f = fract(p);
+                f = f * f * (3.0 - 2.0 * f);
+                return mix(mix(hash(i), hash(i + vec2(1.0, 0.0)), f.x),
+                           mix(hash(i + vec2(0.0, 1.0)), hash(i + vec2(1.0, 1.0)), f.x), f.y);
+            }
+
+            void main() {
+                float n = noise(vWorldPos.xz * 4.0);
+                float n2 = noise(vWorldPos.xz * 12.0);
+                float n3 = noise(vWorldPos.xz * 25.0);
+
+                // Gravel colors (gray tones with some variation)
+                vec3 gravel1 = vec3(0.55, 0.52, 0.50);
+                vec3 gravel2 = vec3(0.65, 0.62, 0.58);
+                vec3 gravel3 = vec3(0.45, 0.43, 0.40);
+
+                vec3 col = mix(gravel1, gravel2, n);
+                col = mix(col, gravel3, n2 * 0.4);
+
+                // Rocky texture detail
+                float rocks = step(0.6, n3);
+                col = mix(col, col * 1.15, rocks * 0.3);
+                col *= 0.9 + n3 * 0.2;
+
+                gl_FragColor = vec4(col, 1.0);
+            }
+        `;
+
         function createBackdrop() {
             const rockMat = new THREE.ShaderMaterial({
                 vertexShader: rockVS,
@@ -864,17 +995,27 @@
             cliffBack2Mesh.position.set(0, 5, -20);
             scene.add(cliffBack2Mesh);
 
-            // Left cliff - extended
-            const cliffLeft = new THREE.BoxGeometry(5, 12, 35);
-            const cliffLeftMesh = new THREE.Mesh(cliffLeft, rockMat.clone());
-            cliffLeftMesh.position.set(-18, 2, -5);
-            scene.add(cliffLeftMesh);
+            // Sand area (left side) - beach-like
+            const sandMat = new THREE.ShaderMaterial({
+                vertexShader: rockVS,
+                fragmentShader: sandFS
+            });
+            const sandArea = new THREE.PlaneGeometry(25, 50);
+            sandArea.rotateX(-Math.PI / 2);
+            const sandMesh = new THREE.Mesh(sandArea, sandMat);
+            sandMesh.position.set(-22, -2.95, 0);
+            scene.add(sandMesh);
 
-            // Right cliff - extended
-            const cliffRight = new THREE.BoxGeometry(5, 10, 30);
-            const cliffRightMesh = new THREE.Mesh(cliffRight, rockMat.clone());
-            cliffRightMesh.position.set(18, 1, -3);
-            scene.add(cliffRightMesh);
+            // Gravel area (right side) - rocky path
+            const gravelMat = new THREE.ShaderMaterial({
+                vertexShader: rockVS,
+                fragmentShader: gravelFS
+            });
+            const gravelArea = new THREE.PlaneGeometry(25, 50);
+            gravelArea.rotateX(-Math.PI / 2);
+            const gravelMesh = new THREE.Mesh(gravelArea, gravelMat);
+            gravelMesh.position.set(22, -2.95, 0);
+            scene.add(gravelMesh);
 
             // Stepped rocks (like in Chao Island) - behind the pool
             const stepRock1 = new THREE.BoxGeometry(6, 2.5, 3);
@@ -925,36 +1066,24 @@
             splash.position.set(-3, -2.9, -13);
             scene.add(splash);
 
-            // Grass areas - extended surrounding the pool area
+            // Grass areas - front and back of pool
             const grassMat = new THREE.ShaderMaterial({
                 vertexShader: rockVS,
                 fragmentShader: grassFS
             });
 
-            // Large grass area surrounding pool
-            const grassRight = new THREE.PlaneGeometry(15, 40);
-            grassRight.rotateX(-Math.PI / 2);
-            const grassRightMesh = new THREE.Mesh(grassRight, grassMat);
-            grassRightMesh.position.set(18, -2.95, 0);
-            scene.add(grassRightMesh);
-
-            const grassLeft = new THREE.PlaneGeometry(12, 35);
-            grassLeft.rotateX(-Math.PI / 2);
-            const grassLeftMesh = new THREE.Mesh(grassLeft, grassMat.clone());
-            grassLeftMesh.position.set(-18, -2.95, 0);
-            scene.add(grassLeftMesh);
-
-            const grassFront = new THREE.PlaneGeometry(50, 15);
+            // Front grass area
+            const grassFront = new THREE.PlaneGeometry(50, 20);
             grassFront.rotateX(-Math.PI / 2);
             const grassFrontMesh = new THREE.Mesh(grassFront, grassMat.clone());
-            grassFrontMesh.position.set(0, -2.95, 20);
+            grassFrontMesh.position.set(0, -2.95, 22);
             scene.add(grassFrontMesh);
 
             // Back grass (between pool and cliffs)
-            const grassBack = new THREE.PlaneGeometry(50, 8);
+            const grassBack = new THREE.PlaneGeometry(50, 10);
             grassBack.rotateX(-Math.PI / 2);
             const grassBackMesh = new THREE.Mesh(grassBack, grassMat.clone());
-            grassBackMesh.position.set(0, -2.95, -16);
+            grassBackMesh.position.set(0, -2.95, -17);
             scene.add(grassBackMesh);
 
             // Small decorative rocks
@@ -1006,7 +1135,7 @@
             // Add ambient and directional light for materials
             const ambientLight = new THREE.AmbientLight(0xffffff, 0.6);
             scene.add(ambientLight);
-            const dirLight = new THREE.DirectionalLight(0xffffff, 0.8);
+            dirLight = new THREE.DirectionalLight(0xffffff, 0.8);
             dirLight.position.set(5, 10, 5);
             scene.add(dirLight);
 
@@ -1211,6 +1340,83 @@
                 const rung = new THREE.Mesh(rungGeo.clone(), metalMat.clone());
                 rung.position.set(ladderX, deckY - 1.4 + i * 0.5, ladderZ);
                 scene.add(rung);
+            }
+        }
+
+        // ============================================================
+        // RAIN SYSTEM
+        // ============================================================
+        function createRain() {
+            const rainCount = 3000;
+            rainGeometry = new THREE.BufferGeometry();
+            const positions = new Float32Array(rainCount * 3);
+            const velocities = new Float32Array(rainCount);
+
+            for (let i = 0; i < rainCount; i++) {
+                positions[i * 3] = (Math.random() - 0.5) * 60;
+                positions[i * 3 + 1] = Math.random() * 25;
+                positions[i * 3 + 2] = (Math.random() - 0.5) * 60;
+                velocities[i] = 0.3 + Math.random() * 0.2;
+            }
+
+            rainGeometry.setAttribute('position', new THREE.BufferAttribute(positions, 3));
+            rainGeometry.setAttribute('velocity', new THREE.BufferAttribute(velocities, 1));
+
+            const rainMaterial = new THREE.PointsMaterial({
+                color: 0xaaccff,
+                size: 0.08,
+                transparent: true,
+                opacity: 0.6,
+                blending: THREE.AdditiveBlending
+            });
+
+            rainParticles = new THREE.Points(rainGeometry, rainMaterial);
+            rainParticles.visible = false;
+            scene.add(rainParticles);
+        }
+
+        function updateRain() {
+            if (!rainParticles || !rainParticles.visible) return;
+
+            const positions = rainGeometry.attributes.position.array;
+            const velocities = rainGeometry.attributes.velocity.array;
+
+            for (let i = 0; i < positions.length / 3; i++) {
+                positions[i * 3 + 1] -= velocities[i];
+
+                // Reset raindrop when it falls below ground
+                if (positions[i * 3 + 1] < -5) {
+                    positions[i * 3 + 1] = 20 + Math.random() * 5;
+                    positions[i * 3] = (Math.random() - 0.5) * 60;
+                    positions[i * 3 + 2] = (Math.random() - 0.5) * 60;
+                }
+            }
+
+            rainGeometry.attributes.position.needsUpdate = true;
+        }
+
+        function setWeather(weather) {
+            currentWeather = weather;
+
+            const sunnyBtn = document.getElementById('sunny-btn');
+            const rainBtn = document.getElementById('rain-btn');
+
+            if (weather === 'sunny') {
+                sunnyBtn.classList.add('active');
+                rainBtn.classList.remove('active');
+
+                // Sunny settings
+                scene.background = new THREE.Color(0x87CEEB);
+                if (dirLight) dirLight.intensity = 0.8;
+                if (rainParticles) rainParticles.visible = false;
+            } else {
+                sunnyBtn.classList.remove('active');
+                rainBtn.classList.add('active');
+
+                // Rainy settings - darker, moodier
+                scene.background = new THREE.Color(0x4A5568);
+                if (dirLight) dirLight.intensity = 0.3;
+                if (rainParticles) rainParticles.visible = true;
             }
         }
 
@@ -1691,6 +1897,7 @@
             updateRipples(dt);
             updateUniforms();
             updateToys(dt, elapsed);
+            updateRain();
 
             floor.material.uniforms.uTime.value = elapsed;
             water.material.uniforms.uTime.value = elapsed;
